# QSOT2-Compiler

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  pyproject.toml  run_experiment.py
.github/workflows/: ci.yml  paper.yml
configs/: experiment.yaml
docs/: MIGRATION_FROM_V2.md  QSOT_ROADMAP.md  SCOPE.md
experimental/: phase6.py
experimental/rust_sidecar/: Cargo.toml
experimental/rust_sidecar/src/: main.rs
paper/: README.md  main.tex  references.bib
paper/sections/: 01_scope_and_background.tex  02_phase0_axioms.tex  03_phase1_3_model_checks.tex  04_phase4_kd.tex  05_phase5_memory_proxy.tex  06_results.tex  07_limits_and_nonclaims.tex  08_reproducibility.tex  09_acknowledgements.tex
release_notes/: v0.1.0.md
reports/: report.md  result.json  sweep_alpha.json
scripts/: alpha_sweep.py
src/qsot2/: __init__.py
src/qsot2/cli/: __init__.py  run_experiment.py
src/qsot2/core/: __init__.py  checks.py  claim_boundary.py  config.py  phase_context.py  results.py  runner.py
src/qsot2/core/phases/: __init__.py  phase0.py  phase1.py  phase2.py  phase3.py  phase4.py  phase5.py
src/qsot2/model/: __init__.py  axioms.py  background.py  beta_residual.py  channels.py  classification.py  falsification.py  memory_kernel.py  optimizer.py  quantum.py
src/qsot2/reports/: __init__.py  renderer.py
src/qsot2/reports/templates/: experiment_report.md.j2
tests/: conftest.py
tests/integration/: test_math_consistency_run.py
tests/unit/: test_axioms.py  test_backgrounds.py  test_channels.py  test_claim_boundary.py  test_cli.py  test_config.py  test_memory_proxy.py  test_optimizer.py  test_renderer.py  test_results.py  test_runner.py
