[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qsot2"
version = "0.1.0"
description = "Mathematical-consistency verifier for a phenomenological quantum-channel model of curved-spacetime backgrounds (QSOT = Quantum State Over Time)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yun Kwansub" }, { name = "Flamehaven Initiative" }]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "black==26.5.1"]

[project.scripts]
qsot2-run = "qsot2.cli.run_experiment:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=qsot2 --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
